--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             top: 0;
             z-index: 99;
             opacity: 0.8;
+            box-shadow: 0px 5px 5px #888888;
         }
         .divLogo{
             padding: 10px;
@@ -31,6 +32,7 @@
             background-image: url("content/fundo_menu.jpg");
             background-repeat: repeat-x;
             width: 100%;
+
         }
 
         #menu ul {
@@ -50,10 +52,9 @@
         #menu ul li :hover {
             display: inline-block;
             color: #000000;
-            border-bottom:1px solid #999999;
+            border-bottom:1px solid #000000;
             text-decoration: none;
             width: 150px;
-            height: 100%;
             position: relative;
         }
 
