--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html lang="pt">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width">
     <link rel="stylesheet" type="text/css" href="css/bootstrap.css" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap-theme.css" />
     <script type="text/javascript" src="js/jquery-3.1.1.slim.min.js"></script>
@@ -18,83 +18,71 @@
             background-position: center;
             background-size: cover;
         }
-        .menuFixo {
-            position: fixed;
-            top: 0;
-            z-index: 99;
-            opacity: 0.8;
-            box-shadow: 0px 5px 5px #888888;
-        }
+		  body {
+			position: relative; 
+		  }
+		  .affix {
+			  top:0;
+			  width: 100%;
+			  z-index: 9999 !important;
+		  }
+		  .navbar {
+			  margin-bottom: 0px;
+		  }
+
+		  .affix ~ .container-fluid {
+			 position: relative;
+			 top: 50px;
+		  }
         .divLogo{
             padding: 10px;
         }
-        #menuHeader{
-            background-image: url("content/fundo_menu.jpg");
-            background-repeat: repeat-x;
-            width: 100%;
-
-        }
-
-        #menu ul {
-            margin-left: -15px;
-            list-style:none;
-            margin-top: 10px;
-        }
-        #menu ul li {
-            display: inline-block;
-            width: 150px;
-        }
-        #menu ul li a {
-            color: #6D6D6D;
-            font-family: Verdana;
-            font-size: large;
-        }
-        #menu ul li :hover {
-            display: inline-block;
-            color: #000000;
-            border-bottom:1px solid #000000;
-            text-decoration: none;
-            width: 150px;
-            position: relative;
-        }
+		.nav > li {
+			width:130px;
+		}
 
     </style>
-    <script type="text/javascript">
-        $(function(){
-            var nav = $('#menuHeader');
-            $(window).scroll(function () {
-                if ($(this).scrollTop() > 50) {
-                    nav.addClass("menuFixo");
-                } else {
-                    nav.removeClass("menuFixo");
-                }
-            });
-        });
-    </script>
 </head>
-<body>
+<body data-spy="scroll" data-target=".navbar" data-offset="50">
 <!-- Seção do Cabeçalho Início -->
 <header id="Inicio">
     <div class="container divLogo">
         <div class="row">
-            <div class="col-sm-12 text-center">
-                <img src="content/logo.png" alt="Santos Toledo Advogados associados" style="width: 350px;"/>
+		  <div class="col-sm-4"></div>
+            <div class="col-sm-4">
+                <img src="content/logo.png" class="img-responsive" alt="Santos Toledo Advogados associados" style="width: 350px;"/>
             </div>
+		   <div class="col-sm-4"></div>
         </div>
     </div>
-    <nav id="menuHeader">
-            <div class="row">
-                <div id="menu" class="col-sm-12 text-center">
-                    <ul>
-                        <li><a href="#Inicio">Inicio</a></li>
+	<nav class="navbar navbar-default" data-spy="affix" data-offset-top="197">
+  <div class="container">
+	  <div class="row">
+	   <div class="col-sm-2"></div>
+		<div class="col-sm-8 text-center">
+			<div class="navbar-header">
+				<button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+				  <span class="icon-bar"></span>
+				  <span class="icon-bar"></span>
+				  <span class="icon-bar"></span>                        
+			  </button>
+			</div>
+			<div>
+			  <div class="collapse navbar-collapse" id="myNavbar">
+				<ul class="nav navbar-nav">
+				  <li><a href="#Inicio">Inicio</a></li>
                         <li><a href="#Sobre">Sobre</a></li>
                         <li><a href="#Servicos">Serviços</a></li>
                         <li><a href="#">Associados</a></li>
                         <li><a href="#">Contato</a></li>
-                    </ul>
-                </div>
-            </div>
-    </nav>
+				  </ul>
+			  </div>
+			</div>
+		  </div>
+		 <div class="col-sm-2"></div>
+	  </div>
+  </div>
+</nav>    
 </header>
 <section>
 <div class="row">
