--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <li><a href="#Servicos">Serviços</a></li>
                         <li><a href="#">Associados</a></li>
                        <li><a href="#Localizacao">Localização</a></li>
-                        <li><a href="#">Contato</a></li>
+                        <li><a href="#Contato">Contato</a></li>
 				  </ul>
 			  </div>
 			</div>
@@ -214,11 +214,48 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3751.1075648978144!2d-43.94362808557074!3d-19.919871543137486!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xa699e2d9167ce5%3A0x10c0768474fe8b6c!2sR.+Curitiba%2C+815+-+Centro%2C+Belo+Horizonte+-+MG%2C+30170-120!5e0!3m2!1spt-BR!2sbr!4v1488499574246" width="1024" height="400" frameborder="0" style="border:0" allowfullscreen></iframe>
         </div>
 </section>
-<section id="Contato">
-    <form>
-        <input type="text">
-        Informatica
-    </form>
+<section id="Contato" class="sectionForm">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12 text-center">
+                <h2 class="sectionFormTitulo">..:: Entre em contato conosco ::..</h2>
+            </div>
+        </div>
+        <div class="row">
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label class="control-label col-sm-2 labelForm" for="assunto">Assunto:</label>
+                    <div class="col-sm-8">
+                        <input type="text" class="form-control" id="assunto" placeholder="Assunto">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-2 labelForm" for="email">Email:</label>
+                    <div class="col-sm-8">
+                        <input type="email" class="form-control" id="email" placeholder="Enter email">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label col-sm-2 labelForm" for="tel">Telefone:</label>
+                    <div class="col-sm-2">
+                        <input type="tel" class="form-control" id="tel" placeholder="Telefone">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label class="control-label col-sm-2 labelForm" for="comment">Descrição:</label>
+                    <div class="col-sm-8">
+                        <textarea class="form-control" rows="5" id="comment" placeholder="Descreva o assunto"></textarea>
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-sm-offset-2 col-sm-8">
+                        <button type="submit" class="btn btn-default">Enviar</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
 </section>
 </body>
 </html>
