Ajustando algumas imagens

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <!-- Seção do Cabeçalho Início -->
 <header id="Inicio">
     <div class="divTopHeader">
-        <div cla="container-fluid">
+        <div class="container-fluid">
             <span class="spanTopLeft">
              <span class="glyphicon glyphicon-phone-alt"></span>
                 (31) 3332-5000
@@ -51,7 +51,7 @@
 				  <li><a href="#Inicio">Inicio</a></li>
                         <li><a href="#Sobre">Sobre</a></li>
                         <li><a href="#Servicos">Serviços</a></li>
-                        <li><a href="#">Associados</a></li>
+                        <li><a href="#Associados">Associados</a></li>
                        <li><a href="#Localizacao">Localização</a></li>
                         <li><a href="#Contato">Contato</a></li>
 				  </ul>
@@ -101,7 +101,7 @@
 </div>
 </section >
 <section id="Sobre">
-    <div class="row alert-info" style="padding: 20px 0px 20px 0px;">
+    <div class="row alert-info" style="padding: 20px 0 20px 0;">
         <div class="container">
             <div class="col-sm-4">
                 <div>
@@ -111,7 +111,7 @@
                         <p class="text-center" style="font-size: medium;">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus velit dolor, pulvinar at elit id, aliquam faucibus nunc. In ut sagittis magna. Nulla ultrices rutrum purus. Nunc pretium lacus eros. Morbi vitae convallis ligula. Etiam vitae sagittis mi, sit amet pretium ipsum...
                         </p>
-                        <a href="sobre.php" class="btn btn-primary btn-lg">Saiba mais... </a>
+                        <a href="#" class="btn btn-primary btn-lg">Saiba mais... </a>
                     </div>
 
                 </div>
@@ -124,7 +124,7 @@
                         <p class="text-center" style="font-size: medium;">
                             Nulla maximus nulla augue, in elementum dolor sollicitudin vel. Nam tincidunt pharetra tincidunt. Aliquam sollicitudin dui in nibh porttitor, sit amet blandit ipsum dignissim. Sed non erat quis lacus tincidunt pharetra at sed arcu. Sed cursus quis urna sit amet condimentum...
                         </p>
-                        <a href="destaque.php" class="btn btn-primary btn-lg">Saiba mais... </a>
+                        <a href="#" class="btn btn-primary btn-lg">Saiba mais... </a>
                     </div>
                 </div>
             </div>
@@ -136,15 +136,15 @@
                         <p class="text-center" style="font-size: medium;">
                             Ut et risus urna. Vivamus suscipit dui semper facilisis dapibus. Morbi molestie tempus elementum. Suspendisse sed eros eget elit venenatis pellentesque. Nam ac libero ac mi viverra sollicitudin at ac lorem. Cras convallis tortor et nisl viverra, eget pretium...
                         </p>
-                        <a href="servicos.php" class="btn btn-primary btn-lg">Saiba mais... </a>
+                        <a href="#" class="btn btn-primary btn-lg">Saiba mais... </a>
                     </div>
                 </div>
             </div>
-        </div>
+        </div>e
     </div>
 </section>
 <section id="Servicos">
-    <div class="row sectionServicos" style="padding: 40px 0px 20px 0px;">
+    <div class="row sectionServicos" style="padding: 40px 0 20px 0;">
         <div class="container">
             <div class="col-sm-4">
                 <div class="panel panel-default">
@@ -206,6 +206,49 @@
                         </div>
                 </div>
             </div>
+        </div>
+    </div>
+</section>
+<section id="Associados">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-10>">
+                <div id="CarouselAssociados" class="carousel slide" data-ride="carousel">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#CarouselAssociados" data-slide-to="0" class="active"></li>
+                        <li data-target="#CarouselAssociados" data-slide-to="1"></li>
+                        <li data-target="#CarouselAssociados" data-slide-to="2"></li>
+                    </ol>
+
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active associado1">
+
+                        </div>
+
+                        <div class="item associado2">
+
+                        </div>
+
+                        <div class="item carousel">
+
+                        </div>
+                    </div>
+
+                    <!-- Left and right controls
+                    <a class="left carousel-control" href="#CarouselAssociados" role="button" data-slide="prev">
+                        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                        <span class="sr-only">Previous</span>
+                    </a>
+                    <a class="right carousel-control" href="#CarouselAssociados" role="button" data-slide="next">
+                        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                        <span class="sr-only">Next</span>
+                    </a>-->
+                </div>
+            </div>
+            <div class="col-sm-1"></div>
         </div>
     </div>
 </section>
