Ajustando algumas imagens

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				<ul class="nav navbar-nav">
 				  <li><a href="#Inicio">Inicio</a></li>
                         <li><a href="#Sobre">Sobre</a></li>
-                        <li><a href="#Servicos">Serviços</a></li>
+                        <li><a href="#Servicos">Áreas atuação</a></li>
                         <li><a href="#Associados">Associados</a></li>
                        <li><a href="#Localizacao">Localização</a></li>
                         <li><a href="#Contato">Contato</a></li>
@@ -64,7 +64,7 @@
 </nav>    
 </header>
 <section>
-<div class="row">
+<div class="row shadow">
     <div id="myCarousel" class="carousel slide" data-ride="carousel">
         <!-- Indicators -->
         <ol class="carousel-indicators">
@@ -101,8 +101,15 @@
 </div>
 </section >
 <section id="Sobre">
-    <div class="row alert-info" style="padding: 20px 0 20px 0;">
+    <div class="row" >
         <div class="container">
+            <div class="col-sm-1"></div>
+            <div class="col-sm-10">
+                <img src="content/contatossite.svg" class="img-responsive" alt="Contatos Santos Toledo">
+            </div>
+            <div class="col-sm-1"></div>
+        </div>
+       <!-- <div class="container">
             <div class="col-sm-4">
                 <div>
                     <div class="text-center">
@@ -140,70 +147,208 @@
                     </div>
                 </div>
             </div>
-        </div>e
+        </div>-->
     </div>
 </section>
 <section id="Servicos">
-    <div class="row sectionServicos" style="padding: 40px 0 20px 0;">
-        <div class="container">
-            <div class="col-sm-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading text-center">
-                        <a href="#"><h4 style="padding: 5px;" class="text-primary">Lorem Ipsum </h4></a>
-                    </div>
-                    <div class="panel-body">
-                        <p class="text-justify" style="font-size: medium;">
-                            Sed nibh sapien, consequat quis arcu sed
-                        <ul>
-                            <li>Quisque at nisl eget nisi cursus cursus.</li>
-                            <li> Donec eu commodo velit. Etiam a lobortis ante.</li>
-                            <li> Cras facilisis pellentesque justo, eget placerat nisl maximus eget.</li>
-                        </ul>
-                        </p>
-                        <div class="text-center">
-                            <a href="#" class="btn btn-success">Continuar lendo... </a>
-                        </div>
-                    </div>
+    <div class="sectionServicos" >
+        <div class="row">
+            <div class="container">
+                <div class="col-sm-2"></div>
+                <div class="col-sm-8 text-center">
+                    <h1 class="tituloservicos">.:: Áreas de atuação ::.</h1>
                 </div>
+                <div class="col-sm-2"></div>
             </div>
-            <div class="col-sm-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading text-center">
-                        <a href="#"><h4 style="padding: 5px;" class="text-primary">Lorem Ipsum </h4></a>
-                    </div>
-                    <div class="panel-body">
-                        <p class="text-justify" style="font-size: medium;">
-                            Sed nibh sapien, consequat quis arcu sed
-                        <ul>
-                            <li>Quisque at nisl eget nisi cursus cursus.</li>
-                            <li> Donec eu commodo velit. Etiam a lobortis ante.</li>
-                            <li> Cras facilisis pellentesque justo, eget placerat nisl maximus eget.</li>
-                        </ul>
-                        </p>
-                        <div class="text-center">
-                            <a href="#" class="btn btn-success">Continuar lendo... </a>
+        </div>
+        <div class="row">
+            <div class="container">
+                <div class="col-sm-4">
+                    <div class="panel panel-default panelservicos">
+                        <div class="panel-heading">
+                            <img src="content/money.svg" class="imgservicosw" >
+                            <a href="#"><h4 class="labelservicos">Dívidas </h4></a>
                         </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="panel panel-default">
-                    <div class="panel-heading text-center">
-                        <a href="#"><h4 style="padding: 5px;" class="text-primary">Lorem Ipsum </h4></a>
-                    </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
-                                Sed nibh sapien, consequat quis arcu sed
-                            <ul>
-                                <li>Quisque at nisl eget nisi cursus cursus.</li>
-                                <li> Donec eu commodo velit. Etiam a lobortis ante.</li>
-                                <li> Cras facilisis pellentesque justo, eget placerat nisl maximus eget.</li>
+                             <ul>
+                                <li>Dívidas Bancárias.</li>
+                                <li>Juros Abusivos.</li>
+                                <li>Falência e Recuperação Judicial.</li>
+                                <li>Consignados - Descontos Ilegais.</li>
                             </ul>
                             </p>
                             <div class="text-center">
-                                <a href="#" class="btn btn-success">Continuar lendo... </a>
+                                <a href="#" class="btn btn-default">Mais atuações </a>
                             </div>
                         </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel panel-default panelservicos">
+                        <div class="panel-heading">
+                            <img src="content/imobiliario.svg" class="imgservicosw" >
+                            <a href="#"><h4 class="labelservicos">Direito Imobiliário </h4></a>
+                        </div>
+                        <div class="panel-body">
+                            <p class="text-justify" style="font-size: medium;">
+                            <ul>
+                                <li>Locações e Despejos.</li>
+                                <li> Direitos dos Locatários.</li>
+                                <li>Revisão de aluguéis.</li>
+                                <li>Condomínio – Direitos e Deveres.</li>
+                            </ul>
+                            </p>
+                            <div class="text-center">
+                                <a href="#" class="btn btn-default">Mais atuações </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel panel-default panelservicos">
+                        <div class="panel-heading">
+                            <img src="content/consumidor.svg" class="imgservicosw" >
+                            <a href="#"><h4 class="labelservicos">Direito Consumidor</h4></a>
+                        </div>
+                        <div class="panel-body">
+                            <p class="text-justify" style="font-size: medium;">
+                            <ul>
+                                <li>Direito do Consumidor.</li>
+                                <li>Danos Morais.</li>
+                                <li>Empresas Aéreas – Abusos.</li>
+                                <li>Turismo e Hotéis.</li>
+                            </ul>
+                            </p>
+                            <div class="text-center">
+                                <a href="#" class="btn btn-default">Mais atuações </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="container">
+                <div class="col-sm-4">
+                    <div class="panel panel-default panelservicos">
+                        <div class="panel-heading">
+                            <img src="content/inventario.svg" class="imgservicosw" >
+                            <a href="#"><h4 class="labelservicos">Iventários e testamentos </h4></a>
+                        </div>
+                        <div class="panel-body">
+                            <p class="text-justify" style="font-size: medium;">
+                            <ul>
+                                <li>Inventários.</li>
+                                <li>Inventário Judicial.</li>
+                                <li>Inventário Extrajudicial – Cartorário.</li>
+                                <li>Testamentos – Elaboração e Cumprimento.</li>
+                            </ul>
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel panel-default panelservicos">
+                        <div class="panel-heading">
+                            <img src="content/familia.svg" class="imgservicosw" >
+                            <a href="#"><h4 class="labelservicos">Direito de Família </h4></a>
+                        </div>
+                        <div class="panel-body">
+                            <p class="text-justify" style="font-size: medium;">
+                            <ul>
+                                <li>Divórcio – Consensual e Litigioso.</li>
+                                <li>Investigação e Negativa de Paternidade.</li>
+                                <li>Guarda Compartilhada.</li>
+                                <li>Adoções.</li>
+                            </ul>
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel panel-default panelservicos">
+                        <div class="panel-heading">
+                            <img src="content/acordo.svg" class="imgservicosw" >
+                            <a href="#"><h4 class="labelservicos">Servidores publicos</h4></a>
+                        </div>
+                        <div class="panel-body">
+                            <p class="text-justify" style="font-size: medium;">
+                            <ul>
+                                <li>Servidores Públicos.</li>
+                                <li>Lei 100.</li>
+                                <li>Professores – Piso Nacional.</li>
+                                <li>Concursos Públicos.</li>
+                            </ul>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="container">
+                <div class="col-sm-4">
+                    <div class="panel panel-default panelservicos">
+                        <div class="panel-heading">
+                            <img src="content/empresas1.svg" class="imgservicosw" >
+                            <a href="#"><h4 class="labelservicos">Empresas </h4></a>
+                        </div>
+                        <div class="panel-body">
+                            <p class="text-justify" style="font-size: medium;">
+                            <ul>
+                                <li>Consultoria Jurídica.</li>
+                                <li>Empresas – Assistência Mensal.</li>
+                                <li>Gestão de Dívidas Bancárias.</li>
+                                <li>Consultoria e Advocacia Tributária.</li>
+                            </ul>
+                            </p>
+                            <div class="text-center">
+                                <a href="#" class="btn btn-default">Mais atuações </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel panel-default panelservicos">
+                        <div class="panel-heading">
+                            <img src="content/funcionarios.svg" class="imgservicosw" >
+                            <a href="#"><h4 class="labelservicos">Direito do Trabalho </h4></a>
+                        </div>
+                        <div class="panel-body">
+                            <p class="text-justify" style="font-size: medium;">
+                            <ul>
+                                <li>Ações trabalhistas.</li>
+                                <li>Auditoria Trabalhista em Empresas.</li>
+                                <li>Acidentes de Trabalho.</li>
+                            </ul>
+                            </p>
+
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-4">
+                    <div class="panel panel-default panelservicos">
+                        <div class="panel-heading">
+                            <img src="content/direito.svg" class="imgservicosw" >
+                            <a href="#"><h4 class="labelservicos">Direito Criminal</h4></a>
+                        </div>
+                        <div class="panel-body">
+                            <p class="text-justify" style="font-size: medium;">
+                            <ul>
+                                <li>Crimes contra a ordem econômica.</li>
+                                <li>Plantão Criminal.</li>
+                                <li>Crimes Societários e Falimentares.</li>
+                                <li>Crimes Previdenciários e Tributários.</li>
+                            </ul>
+                            </p>
+                            <div class="text-center">
+                                <a href="#" class="btn btn-default">Mais atuações </a>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
