--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </section>
 <section id="Associados" class="fundobranco paddings">
     <div class="container">
@@ -392,6 +393,12 @@
                     <div class="col-sm-offset-2 col-sm-8">
                         <button type="submit" class="btn btn-default">Enviar</button>
                     </div>
+                </div>
+                <div id="alertasucesso" style="display:none;" class="alert alert-success">
+                    <strong>Sucesso!</strong> O seu contato foi enviado com sucesso.
+                </div>
+                <div id="alertawarning" style="display:none;"  class="alert alert-warning">
+                    <strong>Alerta!</strong> Ocorre um erro ao enviar seu contato. Tente novamente mais tarde.
                 </div>
             </form>
             </div>
