--- a/index.html
+++ b/index.html
@@ -429,7 +429,7 @@
         <div class="row">
             <div class="col-sm-1"></div>
             <div class="col-sm-9 ">
-                <p style="float: left; margin-top:11px;">Construído e mantido por </p> <img src="content/logoaet.svg" style="width:100px; float: left;" class="img-responsive" alt="www.aetsolutions.com.br">
+                <p style="float: left; margin-top:11px;">Construído e mantido por </p> <a href="http://www.aetsolutions.com.br" target="_blank" alt="www.aetsolutions.com.br"> <img src="content/logoaet.svg" style="width:100px; float: left;" class="img-responsive" alt="www.aetsolutions.com.br"> </a>
             </div>
             <div class="col-sm-2"></div>
         </div>
