--- a/index.html
+++ b/index.html
@@ -78,19 +78,19 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
             <div class="item active">
-                <img class="img-responsive" style="width:100%;height: 450px;" src="content/santosToledo.jpg" alt="Santos Toledo Advogados Associados" />
+                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/santosToledo.jpg" alt="Santos Toledo Advogados Associados" />
             </div>
 
             <div class="item">
-                <img class="img-responsive" style="width:100%;" src="content/banner1.jpg" alt="Direito dos trabalhadores - Saiba tudo sobre seus direitos" />
+                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/banner1.jpg" alt="Direito dos trabalhadores - Saiba tudo sobre seus direitos" />
             </div>
 
             <div class="item">
-                <img class="img-responsive" style="width:100%;" src="content/banner2.jpg" alt="Direito dos Consumidores - Consumidores têm direitos que desconhecem." />
+                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/banner2.jpg" alt="Direito dos Consumidores - Consumidores têm direitos que desconhecem." />
             </div>
 
             <div class="item">
-                <img class="img-responsive" style="width:100%;" src="content/banner3.jpg" alt="Previdência - Garanta uma aponsentadoria tranquila." />
+                <img class="img-responsive" style="width:100%;max-height: 430px;" src="content/banner3.jpg" alt="Previdência - Garanta uma aponsentadoria tranquila." />
             </div>
         </div>
 
