--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="divTopHeader">
             <div class="container">
                 <span class="spanTopLeft">
-                 <span class="glyphicon glyphicon-phone-alt"></span>
-                    (31) 3332-5000
+                 <span class="glyphicon glyphicon-phone-alt" style="margin-right:15px;"></span>
+                    31 2514-0564 | 98886-3487
                 </span>
                 <a href="mailto:contato@santostoledo.com.br" alt="Envie-nos um e-mail."><span class="glyphicon glyphicon-envelope spanTopRightGlyph" style="margin-right: 70px;"></span></a>
                 <a href="http://www.facebook.com/santostoledoadvogados" target="_blank" alt="Envie-nos um e-mail."> <span class="glyphicon glyphicon-thumbs-up spanTopRightGlyph"></span></a>
