--- a/index.html
+++ b/index.html
@@ -356,7 +356,7 @@
         <div class="row">
             <div class="col-sm-1"></div>
             <div class="col-sm-8 text-center">
-                <p class="sectionFormTitulo">..:: Entre em contato conosco ::..</p>
+                <p class="sectionFormTitulo"> Entre em contato conosco </p>
             </div>
             <div class="col-sm-3"></div>
         </div>
