--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
             <div class="container">
                 <div class="col-sm-2"></div>
                 <div class="col-sm-8 text-center">
-                    <h1 class="tituloservicos">.:: Áreas de atuação ::.</h1>
+                    <h1 class="tituloservicos"> Áreas de atuação </h1>
                 </div>
                 <div class="col-sm-2"></div>
             </div>
@@ -147,7 +147,7 @@
                     <div class="panel panel-default panelservicos">
                         <div class="panel-heading">
                             <img src="content/lawyer.svg" class="imgservicosw" >
-                            <a href="#"><h4 class="labelservicos">Civil </h4></a>
+                            <h4 class="labelservicos">Civil </h4>
                         </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
@@ -168,7 +168,7 @@
                     <div class="panel panel-default panelservicos">
                         <div class="panel-heading">
                             <img src="content/funcionarios.svg" class="imgservicosw" >
-                            <a href="#"><h4 class="labelservicos">Direito do Trabalho </h4></a>
+                            <h4 class="labelservicos">Direito do Trabalho </h4>
                         </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
@@ -186,7 +186,7 @@
                     <div class="panel panel-default panelservicos">
                         <div class="panel-heading">
                             <img src="content/consumidor.svg" class="imgservicosw" >
-                            <a href="#"><h4 class="labelservicos">Direito Consumidor</h4></a>
+                            <h4 class="labelservicos">Direito Consumidor</h4>
                         </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
@@ -211,7 +211,7 @@
                     <div class="panel panel-default panelservicos">
                         <div class="panel-heading">
                             <img src="content/inventario.svg" class="imgservicosw" >
-                            <a href="#"><h4 class="labelservicos">Iventários e testamentos </h4></a>
+                            <h4 class="labelservicos">Iventários e testamentos </h4>
                         </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
@@ -230,7 +230,7 @@
                     <div class="panel panel-default panelservicos">
                         <div class="panel-heading">
                             <img src="content/acordo.svg" class="imgservicosw" >
-                            <a href="#"><h4 class="labelservicos">Previdenciário </h4></a>
+                            <h4 class="labelservicos">Previdenciário </h4>
                         </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
@@ -249,7 +249,7 @@
                     <div class="panel panel-default panelservicos">
                         <div class="panel-heading">
                             <img src="content/direito.svg" class="imgservicosw" >
-                            <a href="#"><h4 class="labelservicos">Direito Criminal</h4></a>
+                            <h4 class="labelservicos">Direito Criminal</h4>
                         </div>
                         <div class="panel-body">
                             <p class="text-justify" style="font-size: medium;">
@@ -270,9 +270,9 @@
         </div>
     </div>
 </section>
-<section id="Associados" class="fundobranco paddings">
+<section id="Associados" class="fundocinza paddings">
     <div class="container">
-        <div class="row fundobranco" >
+        <div class="row fundocinza" >
             <div class="container">
                 <div class="col-sm-1"></div>
                 <div class="col-sm-10 text-center">
